Fix scrollbars for arrow popup

--- a/src/views/browser/style/window.css
+++ b/src/views/browser/style/window.css
@@ -9,6 +9,11 @@
   pointer-events: none;
 }
 
+.window[hidden] {
+  display: block;
+  visibility: hidden;
+}
+
 .window > iframe {
   position: absolute;
   top: 0;
